prepare to fina lpull

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,5 @@
 <header class="header">
-    <div class="header-container">
+    <div class="container header-container">
         <div class="header-logo">
             <a href="/" class="header-nav-logo-link">
                 <svg class="header-nav-logo-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 104 39" fill="none">
@@ -27,6 +27,7 @@
             <li class="header-nav-item"><a href="#contacts" class="header-nav-link">Контакти</a></li>
         </ul>
     </nav>
+    
             <address class="header-side header-address">
                 <ul class="header-address-list">
                     <li class="header-address-item">
@@ -35,6 +36,7 @@
                     <a class="header-address-link" href="mailto:hello@ecotote.com">hello@ecotote.com</a></li>
                 </ul>
             </address>
+
             <button class="burger-btn" type="button" data-main-open>
                 <svg  class="burger-icon" viewBox="0 0 32 32">
                 <use href="../img/sprite.svg#icon-menu"></use>
@@ -63,6 +65,7 @@
                     </svg>
                 </a>
             </div>
+
         <button class="mobile-close-button" type="button" data-main-close>
             <svg class="mobile-close-icon" viewBox="0 0 16 16">
                 <use href="../img/sprite.svg#icon-close"></use>
@@ -80,6 +83,7 @@
                 <li class="mobile-menu-nav-item"><a href="#contacts" class="mobile-menu-nav-link">Контакти</a></li>
             </ul>
         </nav>
+
         <div class="mobile-menu-address-container">
             <address class="mobile-menu-address">
                 <ul class="mobile-menu-address-list">
