--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,10 +1,13 @@
+.header {
+    background-color: #75d281;
+    padding: 16px 0;
+}
+
 .header-container {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 16px 20px;
-    background-color: #75d281;
-    max-height: 64px;
+    padding: 0 20px;
 }
 
 .burger-btn {
@@ -21,13 +24,13 @@
     box-shadow: none;
     /* видалення кольорового фону при натисканні на мобільних пристроях */
     -webkit-tap-highlight-color: transparent; 
-    transition: transform 0.2s ease;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+                visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .burger-btn:active {
-    transform: scale(1.1);
+    transform: scale(1.05);
 }
-
 
 .burger-icon {
     width: 32px;
@@ -37,12 +40,13 @@
 .header-nav-logo-svg {
     width: 82px;
     height: 31px;
-    transition: transform 300ms ease;
 }
 
-.header-nav-logo-svg:active {
-    transform: scale(1.2);
+.header-nav-logo-link {
+    -webkit-tap-highlight-color: transparent;
+    outline: none;
 }
+
 
 .header-nav,
 .header-address {
@@ -59,16 +63,14 @@
     height: 100%;
     z-index: 9999;
     background-color: #75d281;
-    /*----- Анімація------*/
     transform: translateX(100%);
     opacity: 0;
-    transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
+    transition: transform 0.1s ease-in-out, opacity 0.1s ease-in-out;
 }
 
 .mobile-menu.is-open {
     transform: translateX(0);
     opacity: 1;
-    /*----- Анімація Кінець------*/
     pointer-events: auto;
     visibility: visible;
 }
@@ -82,7 +84,6 @@
     cursor: pointer;
     width: 32px;
     height: 32px;
-    /* видалення кольорового фону при натисканні на мобільних пристроях */
     -webkit-tap-highlight-color: transparent;
     transition: transform 0.2s ease;
 }
@@ -117,13 +118,11 @@
 .mobile-nav-logo-svg {
     width: 82px;
     height: auto;
-    /* видалення кольорового фону при натисканні на мобільних пристроях */
-    -webkit-tap-highlight-color: transparent;
-    transition: transform 0.3s ease;
 }
 
-.mobile-nav-logo-svg:active {
-    transform: scale(1.1);
+.mobile-nav-logo-link {
+    -webkit-tap-highlight-color: transparent;
+    outline: none;
 }
 
 .mobile-menu-address-container {
@@ -143,8 +142,13 @@
                 /*==================== Tablet ====================*/
 
 @media screen and (min-width: 768px) {
+.header {
+    padding: 20px 0;
+}
+
 .header-container {
-    padding: 20px 28px 20px 32px;
+    padding-left: 32px;
+    padding-right: 28px;
 }
 
 .mobile-menu-container {
@@ -177,15 +181,16 @@
 
                 /*================= Mobile Menu End  ==================*/
 
+                /*====================== Desktop ======================*/
 
+@media screen and (min-width: 1440px) {
+.header {
+    padding: 23px 0;
+}
 
-
-                /*==================== Desktop ====================*/
-
-@media screen and (min-width: 1340px) {
-.header-container {
-    padding: 23px 64px; 
+.header-container { 
     max-height: 72px;
+    padding: 0 64px;
 }
 
 .header-nav-logo-svg {
@@ -209,7 +214,7 @@
 }
 
 .header-nav-item:hover {
-    transform: scale(1.08);
+    transform: scale(1.01);
 }
 
 .header-nav-item:active {
