--- a/src/partials/assortment.html
+++ b/src/partials/assortment.html
@@ -34,12 +34,14 @@
         </div>
 
         <div class="text-box">
-          <h3 class="sub-title">EcoBag Classic</h3>
+          <h4 class="sub-title">EcoBag Classic</h4>
           <p class="desc">
             Елегантна та містка сумка для щоденного використання.
           </p>
           <p class="price">$25</p>
-          <button class="buy-btn" type="button">Купити</button>
+          <a href="#contacts">
+            <button class="buy-btn" type="button">Купити</button>
+          </a>
         </div>
       </li>
 
@@ -75,13 +77,15 @@
         </div>
 
         <div class="text-box">
-          <h3 class="sub-title">EcoTote Shopper</h3>
+          <h4 class="sub-title">EcoTote Shopper</h4>
           <p class="desc">
             Ідеальна для покупок, з <br />
             посиленими ручками.
           </p>
           <p class="price">$30</p>
-          <button class="buy-btn" type="button">Купити</button>
+          <a href="#contacts">
+            <button class="buy-btn" type="button">Купити</button>
+          </a>
         </div>
       </li>
 
@@ -117,12 +121,14 @@
         </div>
 
         <div class="text-box">
-          <h3 class="sub-title">EcoBackpack Urban</h3>
+          <h4 class="sub-title">EcoBackpack Urban</h4>
           <p class="desc">
             Зручний рюкзак для міста з відділенням для ноутбука.
           </p>
           <p class="price">$45</p>
-          <button class="buy-btn" type="button">Купити</button>
+          <a href="#contacts">
+            <button class="buy-btn" type="button">Купити</button>
+          </a>
         </div>
       </li>
 
@@ -158,10 +164,12 @@
         </div>
 
         <div class="text-box">
-          <h3 class="sub-title">EcoCrossbody Mini</h3>
+          <h4 class="sub-title">EcoCrossbody Mini</h4>
           <p class="desc">Компактна сумка через плече для найнеобхіднішого.</p>
           <p class="price">$20</p>
-          <button class="buy-btn" type="button">Купити</button>
+          <a href="#contacts">
+            <button class="buy-btn" type="button">Купити</button>
+          </a>
         </div>
       </li>
 
@@ -197,10 +205,12 @@
         </div>
 
         <div class="text-box">
-          <h3 class="sub-title">EcoLunch Bag</h3>
+          <h4 class="sub-title">EcoLunch Bag</h4>
           <p class="desc">Стильна та практична сумка для обідів.</p>
           <p class="price">$15</p>
-          <button class="buy-btn" type="button">Купити</button>
+          <a href="#contacts">
+            <button class="buy-btn" type="button">Купити</button>
+          </a>
         </div>
       </li>
 
@@ -236,12 +246,14 @@
         </div>
 
         <div class="text-box">
-          <h3 class="sub-title">EcoBeach Tote</h3>
+          <h4 class="sub-title">EcoBeach Tote</h4>
           <p class="desc">
             Велика сумка для пляжних речей з водонепроникною підкладкою.
           </p>
           <p class="price">$35</p>
-          <button class="buy-btn" type="button">Купити</button>
+          <a href="#contacts">
+            <button class="buy-btn" type="button">Купити</button>
+          </a>
         </div>
       </li>
 
@@ -277,10 +289,12 @@
         </div>
 
         <div class="text-box">
-          <h3 class="sub-title">EcoTravel Duffle</h3>
+          <h4 class="sub-title">EcoTravel Duffle</h4>
           <p class="desc">Містка дорожня сумка з додатковими кишенями.</p>
           <p class="price">$60</p>
-          <button class="buy-btn" type="button">Купити</button>
+          <a href="#contacts">
+            <button class="buy-btn" type="button">Купити</button>
+          </a>
         </div>
       </li>
 
@@ -316,10 +330,12 @@
         </div>
 
         <div class="text-box">
-          <h3 class="sub-title">EcoKids Bag</h3>
+          <h4 class="sub-title">EcoKids Bag</h4>
           <p class="desc">Яскрава та зручна сумка для дітей.</p>
           <p class="price">$22</p>
-          <button class="buy-btn" type="button">Купити</button>
+          <a href="#contacts">
+            <button class="buy-btn" type="button">Купити</button>
+          </a>
         </div>
       </li>
     </ul>
