--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -6,17 +6,12 @@
       <li class="glr-item glr-item-1">
         <picture>
           <source
-            media="(max-width: 767px) "
-            srcset="src/img/gallery/img-mob1.jpg 1x,
-              src/img/gallery/img-mob1@2x.jpg 2x
-            "
+            media="(max-width: 767px)"
+            srcset="src/img/gallery/img-mob1.jpg 1x, src/img/gallery/img-mob1.jpg 2x"
           />
           <source
             media="(min-width: 768px)"
-            srcset="
-              src/img/gallery/img-tab1.jpg    1x,
-              src/img/gallery/img-tab1@2x.jpg 2x
-            "
+            srcset="src/img/gallery/img-tab1.jpg 1x, src/img/gallery/img-tab1@2x.jpg 2x"
           />
           <source
             media="(min-width: 1440px)"
@@ -24,7 +19,7 @@
           />
           <img
             class="glr-img"
-            src="src/img/gallery/img-1.jpg"
+            src="src/img/gallery/img1.jpg"
             alt="An eco tote placed on a chair or beside a table at a cozy coffee shop. There’s a cup of coffee, a book or a laptop nearby. The setting is minimal and aesthetic, evoking slow lifestyle and conscious choices."
           />
         </picture>
@@ -33,17 +28,11 @@
         <picture>
           <source
             media="(max-width: 767px)"
-            srcset="
-              src/img/gallery/img-mob2.jpg    1x,
-              src/img/gallery/img-mob2@2x.jpg 2x
-            "
+            srcset="src/img/gallery/img-mob2.jpg 1x, src/img/gallery/img-mob2@2x.jpg 2x"
           />
           <source
             media="(min-width: 768px)"
-            srcset="
-              src/img/gallery/img-tab2.jpg    1x,
-              src/img/gallery/img-tab2@2x.jpg 2x
-            "
+            srcset="src/img/gallery/img-tab2.jpg 1x, src/img/gallery/img-tab2@2x.jpg 2x"
           />
           <source
             media="(min-width: 1440px)"
@@ -60,17 +49,11 @@
         <picture>
           <source
             media="(max-width: 767px)"
-            srcset="
-              src/img/gallery/img-mob3.jpg    1x,
-              src/img/gallery/img-mob3@2x.jpg 2x
-            "
+            srcset="src/img/gallery/img-mob3.jpg 1x, src/img/gallery/img-mob3@2x.jpg 2x"
           />
           <source
             media="(min-width: 768px)"
-            srcset="
-              src/img/gallery/img-tab3.jpg    1x,
-              src/img/gallery/img-tab3@2x.jpg 2x
-            "
+            srcset="src/img/gallery/img-tab3.jpg 1x, src/img/gallery/img-tab3@2x.jpg 2x"
           />
           <source
             media="(min-width: 1440px)"
@@ -86,18 +69,12 @@
       <li class="glr-item glr-item-4">
         <picture>
           <source
-            media="(max-width: 767px) "
-            srcset="
-              src/img/gallery/img-mob4.jpg    1x,
-              src/img/gallery/img-mob4@2x.jpg 2x
-            "
+            media="(max-width: 767px)"
+            srcset="src/img/gallery/img-mob4.jpg 1x, src/img/gallery/img-mob4@2x.jpg 2x"
           />
           <source
             media="(min-width: 768px)"
-            srcset="
-              src/img/gallery/img-tab4.jpg    1x,
-              src/img/gallery/img-tab4@2x.jpg 2x
-            "
+            srcset="src/img/gallery/img-tab4.jpg 1x, src/img/gallery/img-tab4@2x.jpg 2x"
           />
           <source
             media="(min-width: 1440px)"
