--- a/src/css/header.css
+++ b/src/css/header.css
@@ -138,3 +138,43 @@
     font-style: normal;
     gap: 16px;
 }
+
+ /*==================== Tablet ====================*/
+
+@media screen and (min-width: 768px) {
+.header {
+    padding: 20px 0;
+}
+
+.header-container {
+    padding-left: 32px;
+    padding-right: 28px;
+}
+
+.mobile-menu-container {
+    padding: 0 16px 0 32px;
+}
+
+.mobile-menu-top {
+    padding-left: 0px;
+}
+
+.mobile-menu-nav-list {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    padding-left: 0;
+}
+
+.burger-btn,
+.burger-icon {
+    width: 24px;
+    height: 24px;
+}
+
+.mobile-menu-address-container {
+    display: flex;
+    margin-top: 0px;
+    padding-left: 0px;
+}  
+}
