add css in mobile

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,50 +1,59 @@
-<section>
+<section class="advantages">
   <div class="container">
-    <h4>Переваги</h4>
-    <h2>Чому обрати нас?</h2>
-    <p>
+    <h4 class="advantages-subtitles">Переваги</h4>
+    <h2 class="advantages-title">Чому обрати нас?</h2>
+    <p class="advantages-text text">
       Наші сумки виготовлені з екологічно чистих матеріалів, що забезпечують
       стійкість і довговічність. Обираючи EcoTote, ви підтримуєте екологічну
       відповідальність.
     </p>
-    <ul>
-      <li>
+    <ul class="advantages-list">
+      <li class="advantages-item">
         <img
+          class="advantages-img"
           srcset="
             ../img/advantages/img1-mob.jpg    1x,
             ../img/advantages/img1-mob@2x.jpg 2x
           "
           src="../img/advantages/img1-mob.jpg"
-          alt=""
+          alt="органічні матеріали"
         />
-        <h3>Стійкість та екологічність</h3>
-        <p>Виготовлені з органічної бавовни та переробленого пластику.</p>
+        <h3 class="advantages-item-subtitle">Стійкість та екологічність</h3>
+        <p class="advantages-item-text text">
+          Виготовлені з органічної бавовни та переробленого пластику.
+        </p>
       </li>
 
       <li>
         <img
+          class="advantages-img"
           srcset="
             ../img/advantages/img2-mob.jpg    1x,
             ../img/advantages/img2-mob@2x.jpg 2x
           "
           src="../img/advantages/img2-mob.jpg"
-          alt=""
+          alt="ручне шиття"
         />
-        <h3>Міцність і довговічність</h3>
-        <p>Наші сумки мають посилені шви для тривалого використання.</p>
+        <h3 class="advantages-item-subtitle">Міцність і довговічність</h3>
+        <p class="advantages-item-text text">
+          Наші сумки мають посилені шви для тривалого використання.
+        </p>
       </li>
 
       <li>
         <img
+          class="advantages-img"
           srcset="
             ../img/advantages/img3-mob.jpg    1x,
             ../img/advantages/img3-mob@2x.jpg 2x
           "
           src="../img/advantages/img3-mob.jpg"
-          alt=""
+          alt="модні еко-сумки"
         />
-        <h3>Стильний та сучасний дизайн</h3>
-        <p>Мінімалістичні моделі в обмежених серіях для кожного стилю.</p>
+        <h3 class="advantages-item-subtitle">Стильний та сучасний дизайн</h3>
+        <p class="advantages-item-text text">
+          Мінімалістичні моделі в обмежених серіях для кожного стилю.
+        </p>
       </li>
     </ul>
   </div>
