--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -2,7 +2,7 @@
   <div class="container">
     <h4 class="advantages-subtitles">Переваги</h4>
     <h2 class="advantages-title">Чому обрати нас?</h2>
-    <p class="advantages-text text">
+    <p class="advantages-text">
       Наші сумки виготовлені з екологічно чистих матеріалів, що забезпечують
       стійкість і довговічність. Обираючи EcoTote, ви підтримуєте екологічну
       відповідальність.
@@ -19,7 +19,7 @@
           alt="органічні матеріали"
         />
         <h3 class="advantages-item-subtitle">Стійкість та екологічність</h3>
-        <p class="advantages-item-text text">
+        <p class="advantages-item-text">
           Виготовлені з органічної бавовни та переробленого пластику.
         </p>
       </li>
@@ -35,7 +35,7 @@
           alt="ручне шиття"
         />
         <h3 class="advantages-item-subtitle">Міцність і довговічність</h3>
-        <p class="advantages-item-text text">
+        <p class="advantages-item-text">
           Наші сумки мають посилені шви для тривалого використання.
         </p>
       </li>
@@ -51,7 +51,7 @@
           alt="модні еко-сумки"
         />
         <h3 class="advantages-item-subtitle">Стильний та сучасний дизайн</h3>
-        <p class="advantages-item-text text">
+        <p class="advantages-item-text">
           Мінімалістичні моделі в обмежених серіях для кожного стилю.
         </p>
       </li>
