assortment_v6 (photo optimization webp)

--- a/src/partials/assortment.html
+++ b/src/partials/assortment.html
@@ -7,27 +7,27 @@
           <picture class="asort-pictures">
             <source
               srcset="
-                /img/assortment/assortment-img-1-pc-@x1.jpg 1x,
-                /img/assortment/assortment-img-1-pc-@x2.jpg 2x
+                /img/assortment-webp/assortment-img-1-pc-@x1.webp 1x,
+                /img/assortment-webp/assortment-img-1-pc-@x2.webp 2x
               "
               media="(min-width: 1440px)"
             />
             <source
               srcset="
-                /img/assortment/assortment-img-1-tab-@x1.jpg 1x,
-                /img/assortment/assortment-img-1-tab-@x2.jpg 2x
+                /img/assortment-webp/assortment-img-1-tab-@x1.webp 1x,
+                /img/assortment-webp/assortment-img-1-tab-@x2.webp 2x
               "
               media="(min-width: 768px)"
             />
             <source
               srcset="
-                /img/assortment/assortment-img-1-mob-@x1.jpg 1x,
-                /img/assortment/assortment-img-1-mob-@x2.jpg 2x
+                /img/assortment-webp/assortment-img-1-mob-@x1.webp 1x,
+                /img/assortment-webp/assortment-img-1-mob-@x2.webp 2x
               "
               media="(max-width: 767px)"
             />
             <img
-              src="/img/assortment/assortment-img-1-pc-@x1.jpg"
+              src="/img/assortment-webp/assortment-img-1-pc-@x1.webp"
               alt="EcoBag Classic"
             />
           </picture>
@@ -50,27 +50,27 @@
           <picture class="asort-pictures">
             <source
               srcset="
-                /img/assortment/assortment-img-2-pc-@x1.jpg 1x,
-                /img/assortment/assortment-img-2-pc-@x2.jpg 2x
+                /img/assortment-webp/assortment-img-2-pc-@x1.webp 1x,
+                /img/assortment-webp/assortment-img-2-pc-@x2.webp 2x
               "
               media="(min-width: 1440px)"
             />
             <source
               srcset="
-                /img/assortment/assortment-img-2-tab-@x1.jpg 1x,
-                /img/assortment/assortment-img-2-tab-@x2.jpg 2x
+                /img/assortment-webp/assortment-img-2-tab-@x1.webp 1x,
+                /img/assortment-webp/assortment-img-2-tab-@x2.webp 2x
               "
               media="(min-width: 768px)"
             />
             <source
               srcset="
-                /img/assortment/assortment-img-2-mob-@x1.jpg 1x,
-                /img/assortment/assortment-img-2-mob-@x2.jpg 2x
+                /img/assortment-webp/assortment-img-2-mob-@x1.webp 1x,
+                /img/assortment-webp/assortment-img-2-mob-@x2.webp 2x
               "
               media="(max-width: 767px)"
             />
             <img
-              src="/src/img/assortment/assortment-img-2-pc-@x1.jpg"
+              src="/src/img/assortment-webp/assortment-img-2-pc-@x1.webp"
               alt="EcoTote Shopper"
             />
           </picture>
@@ -94,27 +94,27 @@
           <picture class="asort-pictures">
             <source
               srcset="
-                /img/assortment/assortment-img-3-pc-@x1.jpg 1x,
-                /img/assortment/assortment-img-3-pc-@x2.jpg 2x
+                /img/assortment-webp/assortment-img-3-pc-@x1.webp 1x,
+                /img/assortment-webp/assortment-img-3-pc-@x2.webp 2x
               "
               media="(min-width: 1440px)"
             />
             <source
               srcset="
-                /img/assortment/assortment-img-3-tab-@x1.jpg 1x,
-                /img/assortment/assortment-img-3-tab-@x2.jpg 2x
+                /img/assortment-webp/assortment-img-3-tab-@x1.webp 1x,
+                /img/assortment-webp/assortment-img-3-tab-@x2.webp 2x
               "
               media="(min-width: 768px)"
             />
             <source
               srcset="
-                /img/assortment/assortment-img-3-mob-@x1.jpg 1x,
-                /img/assortment/assortment-img-3-mob-@x2.jpg 2x
+                /img/assortment-webp/assortment-img-3-mob-@x1.webp 1x,
+                /img/assortment-webp/assortment-img-3-mob-@x2.webp 2x
               "
               media="(max-width: 767px)"
             />
             <img
-              src="/src/img/assortment/assortment-img-3-pc-@x1.jpg"
+              src="/src/img/assortment-webp/assortment-img-3-pc-@x1.webp"
               alt="EcoBackpack Urban"
             />
           </picture>
@@ -137,27 +137,27 @@
           <picture class="asort-pictures">
             <source
               srcset="
-                /img/assortment/assortment-img-4-pc-@x1.jpg 1x,
-                /img/assortment/assortment-img-4-pc-@x2.jpg 2x
+                /img/assortment-webp/assortment-img-4-pc-@x1.webp 1x,
+                /img/assortment-webp/assortment-img-4-pc-@x2.webp 2x
               "
               media="(min-width: 1440px)"
             />
             <source
               srcset="
-                /img/assortment/assortment-img-4-tab-@x1.jpg 1x,
-                /img/assortment/assortment-img-4-tab-@x2.jpg 2x
+                /img/assortment-webp/assortment-img-4-tab-@x1.webp 1x,
+                /img/assortment-webp/assortment-img-4-tab-@x2.webp 2x
               "
               media="(min-width: 768px)"
             />
             <source
               srcset="
-                /img/assortment/assortment-img-4-mob-@x1.jpg 1x,
-                /img/assortment/assortment-img-4-mob-@x2.jpg 2x
+                /img/assortment-webp/assortment-img-4-mob-@x1.webp 1x,
+                /img/assortment-webp/assortment-img-4-mob-@x2.webp 2x
               "
               media="(max-width: 767px)"
             />
             <img
-              src="/src/img/assortment/assortment-img-4-pc-@x1.jpg"
+              src="/src/img/assortment-webp/assortment-img-4-pc-@x1.webp"
               alt="EcoCrossbody Mini"
             />
           </picture>
@@ -178,27 +178,27 @@
           <picture class="asort-pictures">
             <source
               srcset="
-                /img/assortment/assortment-img-5-pc-@x1.jpg 1x,
-                /img/assortment/assortment-img-5-pc-@x2.jpg 2x
+                /img/assortment-webp/assortment-img-5-pc-@x1.webp 1x,
+                /img/assortment-webp/assortment-img-5-pc-@x2.webp 2x
               "
               media="(min-width: 1440px)"
             />
             <source
               srcset="
-                /img/assortment/assortment-img-5-tab-@x1.jpg 1x,
-                /img/assortment/assortment-img-5-tab-@x2.jpg 2x
+                /img/assortment-webp/assortment-img-5-tab-@x1.webp 1x,
+                /img/assortment-webp/assortment-img-5-tab-@x2.webp 2x
               "
               media="(min-width: 768px)"
             />
             <source
               srcset="
-                /img/assortment/assortment-img-5-mob-@x1.jpg 1x,
-                /img/assortment/assortment-img-5-mob-@x2.jpg 2x
+                /img/assortment-webp/assortment-img-5-mob-@x1.webp 1x,
+                /img/assortment-webp/assortment-img-5-mob-@x2.webp 2x
               "
               media="(max-width: 767px)"
             />
             <img
-              src="/src/img/assortment/assortment-img-5-pc-@x1.jpg"
+              src="/src/img/assortment-webp/assortment-img-5-pc-@x1.webp"
               alt="EcoLunch Bag"
             />
           </picture>
@@ -219,27 +219,27 @@
           <picture class="asort-pictures">
             <source
               srcset="
-                /img/assortment/assortment-img-6-pc-@x1.jpg 1x,
-                /img/assortment/assortment-img-6-pc-@x2.jpg 2x
+                /img/assortment-webp/assortment-img-6-pc-@x1.webp 1x,
+                /img/assortment-webp/assortment-img-6-pc-@x2.webp 2x
               "
               media="(min-width: 1440px)"
             />
             <source
               srcset="
-                /img/assortment/assortment-img-6-tab-@x1.jpg 1x,
-                /img/assortment/assortment-img-6-tab-@x2.jpg 2x
+                /img/assortment-webp/assortment-img-6-tab-@x1.webp 1x,
+                /img/assortment-webp/assortment-img-6-tab-@x2.webp 2x
               "
               media="(min-width: 768px)"
             />
             <source
               srcset="
-                /img/assortment/assortment-img-6-mob-@x1.jpg 1x,
-                /img/assortment/assortment-img-6-mob-@x2.jpg 2x
+                /img/assortment-webp/assortment-img-6-mob-@x1.webp 1x,
+                /img/assortment-webp/assortment-img-6-mob-@x2.webp 2x
               "
               media="(max-width: 767px)"
             />
             <img
-              src="/src/img/assortment/assortment-img-6-pc-@x1.jpg"
+              src="/src/img/assortment-webp/assortment-img-6-pc-@x1.webp"
               alt="EcoBeach Tote"
             />
           </picture>
@@ -262,27 +262,27 @@
           <picture class="asort-pictures">
             <source
               srcset="
-                /img/assortment/assortment-img-7-pc-@x1.jpg 1x,
-                /img/assortment/assortment-img-7-pc-@x2.jpg 2x
+                /img/assortment-webp/assortment-img-7-pc-@x1.webp 1x,
+                /img/assortment-webp/assortment-img-7-pc-@x2.webp 2x
               "
               media="(min-width: 1440px)"
             />
             <source
               srcset="
-                /img/assortment/assortment-img-7-tab-@x1.jpg 1x,
-                /img/assortment/assortment-img-7-tab-@x2.jpg 2x
+                /img/assortment-webp/assortment-img-7-tab-@x1.webp 1x,
+                /img/assortment-webp/assortment-img-7-tab-@x2.webp 2x
               "
               media="(min-width: 768px)"
             />
             <source
               srcset="
-                /img/assortment/assortment-img-7-mob-@x1.jpg 1x,
-                /img/assortment/assortment-img-7-mob-@x2.jpg 2x
+                /img/assortment-webp/assortment-img-7-mob-@x1.webp 1x,
+                /img/assortment-webp/assortment-img-7-mob-@x2.webp 2x
               "
               media="(max-width: 767px)"
             />
             <img
-              src="/src/img/assortment/assortment-img-7-pc-@x1.jpg"
+              src="/src/img/assortment-webp/assortment-img-7-pc-@x1.webp"
               alt="EcoTravel Duffle"
             />
           </picture>
@@ -303,27 +303,27 @@
           <picture class="asort-pictures">
             <source
               srcset="
-                /img/assortment/assortment-img-8-pc-@x1.jpg 1x,
-                /img/assortment/assortment-img-8-pc-@x2.jpg 2x
+                /img/assortment-webp/assortment-img-8-pc-@x1.webp 1x,
+                /img/assortment-webp/assortment-img-8-pc-@x2.webp 2x
               "
               media="(min-width: 1440px)"
             />
             <source
               srcset="
-                /img/assortment/assortment-img-8-tab-@x1.jpg 1x,
-                /img/assortment/assortment-img-8-tab-@x2.jpg 2x
+                /img/assortment-webp/assortment-img-8-tab-@x1.webp 1x,
+                /img/assortment-webp/assortment-img-8-tab-@x2.webp 2x
               "
               media="(min-width: 768px)"
             />
             <source
               srcset="
-                /img/assortment/assortment-img-8-mob-@x1.jpg 1x,
-                /img/assortment/assortment-img-8-mob-@x2.jpg 2x
+                /img/assortment-webp/assortment-img-8-mob-@x1.webp 1x,
+                /img/assortment-webp/assortment-img-8-mob-@x2.webp 2x
               "
               media="(max-width: 767px)"
             />
             <img
-              src="/src/img/assortment/assortment-img-8-pc-@x1.jpg"
+              src="/src/img/assortment-webp/assortment-img-8-pc-@x1.webp"
               alt="EcoKids Bag"
             />
           </picture>
