--- a/src/css/support.css
+++ b/src/css/support.css
@@ -1,10 +1,11 @@
 .section-support {
-    width: 320px;
-    padding: 32px 16px;
+    padding: 32px 0;
+}
+
+.section-form {
     display: flex;
     flex-direction: column;
-    gap: 24px;
-    margin: 0 auto;
+    margin-bottom: 24px;
 }
 
 .form-title {
@@ -19,11 +20,8 @@
 }
 
 .form-subtitle {
-    font-family: "Fira Sans", sans-serif;
     font-weight: 400;
     font-size: 18px;
-    line-height: 1.6;
-    color: #030a06;
     margin-bottom: 32px;
 }
 
@@ -34,21 +32,17 @@
 }
 
 .form-label {
-    font-family: "Fira Sans", sans-serif;
-    line-height: 1.6;
-    color: #030a06;
     display: block;
     margin-bottom: 8px;
 }
 
 .form-input {
-    font-family: "Fira Sans", sans-serif;
     line-height: 1.6;
     color: rgba(3, 10, 6, 0.6);
     background-color: rgba(3, 10, 6, 0.05);
     border: 1px solid rgba(3, 10, 6, 0.15);
     border-radius: 6px;
-    min-width: 288px;
+    width: 100%;
     padding: 8px 12px;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     outline: transparent;
@@ -83,7 +77,6 @@
 .text-invalid,
 .text-valid {
     display: none;
-    font-family: "Fira Sans", sans-serif;
     font-weight: 400;
     font-size: 12px;
     line-height: 1.6;
@@ -153,8 +146,7 @@
 @media screen and (min-width: 768px) {
 
     .section-support {
-        width: 768px;
-        padding: 64px 32px;
+        padding: 64px 0;
     }
 
     .form-input {
@@ -185,8 +177,10 @@
 @media screen and (min-width: 1440px) {
 
     .section-support {
-        width: 1440px;
-        padding: 64px;
+        padding: 64px 0;
+    }
+
+    .support-container {
         display: flex;
         gap: 24px;
         flex-direction: row;
