--- a/src/partials/support.html
+++ b/src/partials/support.html
@@ -1,24 +1,6 @@
-<!DOCTYPE html>
-<html lang="uk">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EcoTote</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
-        integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Fira+Sans:ital,wght@0,400;0,500;0,700&display=swap"
-        rel="stylesheet">
-
-    <link rel="stylesheet" href="../css/support.css">
-</head>
-
-<body>
-    <div class="section-support" id="contacts">
+<section class="section-support">
+    <div class="container support-container" id="contacts">
         <div class="section-form">
             <h2 class="form-title">Залишились питання?<br>Зв'яжіться з нами!</h2>
             <h3 class="form-subtitle">Ми тут, щоб допомогти!</h3>
@@ -58,5 +40,4 @@
 
         <div class="image-form"></div>
     </div>
-</body>
-</html>
+</section>
