--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,12 +1,14 @@
 <section class="advantages">
   <div class="container">
-    <h4 class="advantages-subtitles">Переваги</h4>
-    <h2 class="advantages-title">Чому обрати нас?</h2>
-    <p class="advantages-text">
-      Наші сумки виготовлені з екологічно чистих матеріалів, що забезпечують
-      стійкість і довговічність. Обираючи EcoTote, ви підтримуєте екологічну
-      відповідальність.
-    </p>
+    <div class="advantages-box">
+      <h4 class="advantages-subtitles">Переваги</h4>
+      <h2 class="advantages-title">Чому обрати нас?</h2>
+      <p class="advantages-text">
+        Наші сумки виготовлені з екологічно чистих матеріалів, що забезпечують
+        стійкість і довговічність. Обираючи EcoTote, ви підтримуєте екологічну
+        відповідальність.
+      </p>
+    </div>
     <ul class="advantages-list">
       <li class="advantages-item">
         <picture>
