--- a/src/css/advantages.css
+++ b/src/css/advantages.css
@@ -1,5 +1,11 @@
 .advantages {
   padding: 32px 0;
+  margin: 0 auto;
+}
+
+.advantages-box {
+  width: 288px;
+  margin: 0 auto;
 }
 
 .advantages-subtitles {
@@ -15,6 +21,7 @@
   font-size: 36px;
   line-height: 1.2;
   letter-spacing: 0.01em;
+
   margin-bottom: 20px;
 }
 
@@ -24,11 +31,13 @@
 
 .advantages-list {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
   gap: 48px;
 }
 
 .advantages-item {
+  width: 288px;
 }
 
 .advantages-img {
@@ -54,6 +63,11 @@
   .advantages {
     padding: 64px 0;
   }
+
+  .advantages-box {
+    width: 704px;
+  }
+
   .advantages-subtitles {
     margin-bottom: 16px;
   }
@@ -79,6 +93,8 @@
   }
 
   .advantages-list {
+    flex-direction: row;
+    flex-wrap: wrap;
     gap: 24px;
   }
 
