--- a/src/css/assortment.css
+++ b/src/css/assortment.css
@@ -98,6 +98,12 @@
 
 /* Tablet */
 @media screen and (min-width: 768px) {
+
+    .section-assortment {
+        padding-top: 64px;
+        padding-bottom: 64px;
+    }
+
     .section-assortment .container-assortment .asort-sectiom-list .asort-card {
         width: 340px;
         height: 593px;
