--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -11,19 +11,25 @@
     <picture>
       <source
         media="(min-width: 1440px)"
-        srcset="/img/hero/hero-img.jpg 1x, /img/hero/hero-img@2x.jpg 2x"
+        srcset="/img/hero/hero-img.webp 1x, /img/hero/hero-img@2x.webp 2x"
       />
       <source
         media="(min-width: 768px)"
-        srcset="/img/hero/hero-img-tab.jpg 1x, /img/hero/hero-img-tab@2x.jpg 2x"
+        srcset="
+          /img/hero/hero-img-tab.webp    1x,
+          /img/hero/hero-img-tab@2x.webp 2x
+        "
       />
       <source
         media="(min-width: 320px)"
-        srcset="/img/hero/hero-img-mob.jpg 1x, /img/hero/hero-img-mob@2x.jpg 2x"
+        srcset="
+          /img/hero/hero-img-mob.webp    1x,
+          /img/hero/hero-img-mob@2x.webp 2x
+        "
       />
       <img
         class="hero-img"
-        src="/img/hero/hero-img-mob.jpg"
+        src="/img/hero/hero-img-mob.webp"
         alt="bags EcoTote"
         width="288"
         height="285"
