--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -14,28 +14,28 @@
         <picture>
           <source
             srcset="
-              /img/advantages/img1-desc.jpg    1x,
-              /img/advantages/img1-desc@2x.jpg 2x
+              /img/advantages/img1-desc.webp    1x,
+              /img/advantages/img1-desc@2x.webp 2x
             "
             media="(min-width:1440px)"
           />
           <source
             srcset="
-              /img/advantages/img1-tab.jpg    1x,
-              /img/advantages/img1-tab@2x.jpg 2x
+              /img/advantages/img1-tab.webp    1x,
+              /img/advantages/img1-tab@2x.webp 2x
             "
             media="(min-width:768px)"
           />
           <source
             srcset="
-              /img/advantages/img1-mob.jpg    1x,
-              /img/advantages/img1-mob@2x.jpg 2x
+              /img/advantages/img1-mob.webp    1x,
+              /img/advantages/img1-mob@2x.webp 2x
             "
             media="(max-width:767px)"
           />
           <img
             class="advantages-img"
-            src="/img/advantages/img1-mob.jpg"
+            src="/img/advantages/img1-mob.webp"
             alt="органічні матеріали"
           />
         </picture>
@@ -49,28 +49,28 @@
         <picture>
           <source
             srcset="
-              /img/advantages/img2-desc.jpg    1x,
-              /img/advantages/img2-desc@2x.jpg 2x
+              /img/advantages/img2-desc.webp    1x,
+              /img/advantages/img2-desc@2x.webp 2x
             "
             media="(min-width:1440px)"
           />
           <source
             srcset="
-              /img/advantages/img2-tab.jpg    1x,
-              /img/advantages/img2-tab@2x.jpg 2x
+              /img/advantages/img2-tab.webp    1x,
+              /img/advantages/img2-tab@2x.webp 2x
             "
             media="(min-width:768px)"
           />
           <source
             srcset="
-              /img/advantages/img2-mob.jpg    1x,
-              /img/advantages/img2-mob@2x.jpg 2x
+              /img/advantages/img2-mob.webp    1x,
+              /img/advantages/img2-mob@2x.webp 2x
             "
             media="(max-width:767px)"
           />
           <img
             class="advantages-img"
-            src="/img/advantages/img2-tab.jpg"
+            src="/img/advantages/img2-tab.webp"
             alt="ручне шиття"
           />
         </picture>
@@ -84,28 +84,28 @@
         <picture>
           <source
             srcset="
-              /img/advantages/img3-desc.jpg    1x,
-              /img/advantages/img3-desc@2x.jpg 2x
+              /img/advantages/img3-desc.webp    1x,
+              /img/advantages/img3-desc@2x.webp 2x
             "
             media="(min-width:1440px)"
           />
           <source
             srcset="
-              /img/advantages/img3-tab.jpg    1x,
-              /img/advantages/img3-tab@2x.jpg 2x
+              /img/advantages/img3-tab.webp    1x,
+              /img/advantages/img3-tab@2x.webp 2x
             "
             media="(min-width:768px)"
           />
           <source
             srcset="
-              /img/advantages/img3-mob.jpg    1x,
-              /img/advantages/img3-mob@2x.jpg 2x
+              /img/advantages/img3-mob.webp    1x,
+              /img/advantages/img3-mob@2x.webp 2x
             "
             media="(max-width:767px)"
           />
           <img
             class="advantages-img last"
-            src="/img/advantages/img3-desc.jpg"
+            src="/img/advantages/img3-desc.webp"
             alt="модні еко-сумки"
           />
         </picture>
