--- a/src/css/feedbacks.css
+++ b/src/css/feedbacks.css
@@ -2,6 +2,11 @@
   padding-top: 32px;
   padding-bottom: 32px;
 }
+
+.feedback-container {
+  max-width: 288px;
+}
+
 .feedback-item,
 .feedback-icon-item,
 .feedback-icon-link {
@@ -16,30 +21,35 @@
   line-height: 120%;
   letter-spacing: 0.01em;
   text-align: center;
-  /* flex-wrap: wrap; */
   color: #030a06;
 }
+
 .feedback-list {
   margin-top: 32px;
   display: flex;
   flex-wrap: wrap;
   gap: 40px;
 }
+
 .feedback-icon-list {
   display: flex;
   gap: 4px;
   margin-bottom: 12px;
 }
+
 .feedback-icon-item {
   width: 20px;
   height: 18.89px;
 }
+
 .icon-star {
   fill: var(--icon-color, #3ac04c);
 }
+
 .icon-star-no-fill {
   fill: var(--icon-color, #030a06);
 }
+
 .feedback-text {
   font-family: 'Comfortaa';
   font-weight: 700;
@@ -58,7 +68,7 @@
 }
 /* section "Feedback" for tablet */
 @media only screen and (min-width: 768px) {
-  .container {
+  .feedback-container {
     max-width: 768px;
   }
   .section-feedback {
@@ -77,7 +87,7 @@
 }
 /* desktop version*/
 @media only screen and (min-width: 1440px) {
-  .container {
+  .feedback-container {
     max-width: 1440px;
   }
   .feedback-list {
