--- a/src/partials/support.html
+++ b/src/partials/support.html
@@ -19,7 +19,7 @@
                 <div class="form-container">
                     <label class="form-label" for="email">Електронна пошта</label>
                     <div class="form-input-container">
-                        <input class="form-input" type="text" name="email" id="email" placeholder="hello@ecotote.com"
+                        <input class="form-input" type="email" name="email" id="email" placeholder="hello@ecotote.com"
                             pattern="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$" required>
                         <p class="text-valid">Succes!</p>
                         <p class="text-invalid">Error text</p>
@@ -30,8 +30,6 @@
                     <label class="form-label" for="user-comment">Повідомлення</label>
                     <textarea class="form-input form-textarea" name="user-comment" id="user-comment"
                         placeholder="Введіть своє повідомлення..." maxlength="500"></textarea>
-                    <p class="text-valid">Succes!</p>
-                    <p class="text-invalid">Error text</p>
                 </div>
 
                 <button type="submit" class="button-form">Надіслати</button>
